# zoomit

./: README.md  electron-builder.json5  index.html  package.json  tailwind.config.js  vite.config.ts
docs/: optimize.md
electron/main/: index.ts
electron/preload/: index.ts
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/: DrawingOverlay.vue  Icons.vue  SettingsPanel.vue  SettingsView.vue  TextBox.vue
src/composables/: useDrawing.ts
src/types/: app.d.ts  electron.d.ts
