[package]
name = "markon"
version = "0.0.3"
description = "轻量级屏幕标注工具"
authors = [""]
edition = "2021"

[lib]
name = "markon_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
